--- a/MODULE2/grid/challenge.html
+++ b/MODULE2/grid/challenge.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
     <title>GRID!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="./grid.css"/>
+    <link rel="stylesheet" href="./challenge.css"/>
   </head>
   <body>
     <div class="container">
       <header class="child one nav">Header</header>
       <nav class="child two side-bar-left">Nav</nav>
-      <main class="child three main">Main Feed</main>
+      <main class="child three main">Main Feed </main>
       <aside class="child four side-bar-right">Clickbait</aside>
       <article class="child five article-left ">Article 1</article>
       <article class="child six article-center">Article 2</article>
