adds media quieries

--- a/MODULE2/grid/challenge.html
+++ b/MODULE2/grid/challenge.html
@@ -9,12 +9,10 @@
   <body>
     <div class="container">
       <header class="child one nav">Header</header>
-      <nav class="child two side-bar-left">Nav</nav>
+      <nav class="child two">Nav</nav>
       <main class="child three main">Main Feed </main>
-      <aside class="child four side-bar-right">Clickbait</aside>
-      <article class="child five article-left ">Article 1</article>
-      <article class="child six article-center">Article 2</article>
-      <article class="child seven article-right">Article 3</article>
+      <aside class="child four">Clickbait</aside>
+      <aside class="child five">Clickbait</aside>
       <footer class="child eight footer">Footer</footer>
     </div>
   </body>
