--- a/MODULE2/grid/index.html
+++ b/MODULE2/grid/index.html
@@ -7,16 +7,17 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+      <!-- template goes on the container -->
     <div class="container">
       <div class="child one">One</div>
-      <div class="child two">Two</div>
+      <div class="child two one-third">Two</div>
       <div class="child three">Three</div>
       <div class="child four">Four</div>
-      <div class="child five">Five</div>
+      <div class="child five one-third">Five</div>
       <div class="child six">Six</div>
       <div class="child seven">Seven</div>
       <div class="child eight">Eight</div>
-      <div class="child nine">Nine</div>
+      <div class="child nine one-third">Nine</div>
     </div>
   </body>
 </html>
