adds media quieries

--- a/MODULE2/media-quieries/index.html
+++ b/MODULE2/media-quieries/index.html
@@ -12,6 +12,9 @@
 <body>
     <div class="container">
         <div class="box">
+            <div>
+                <button>CLICK ME</button>
+            </div>
             Box one
         </div>
         <div class="box">
