add mergesort notes

--- a/MODULE5/sorting/part-2/mergeSort/merge-sort.html
+++ b/MODULE5/sorting/part-2/mergeSort/merge-sort.html
@@ -8,6 +8,6 @@
     <script src="./merge-sort.js"></script>
 </head>
 <body>
-    <img src="https://en.wikipedia.org/wiki/File:Merge_sort_algorithm_diagram.svg" alt="">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Merge_sort_algorithm_diagram.svg/1236px-Merge_sort_algorithm_diagram.svg.png" width="700" alt="">
 </body>
 </html>
